reload use on claim change; layout issues

--- a/source/Admin.UI/Content/Style.less
+++ b/source/Admin.UI/Content/Style.less
@@ -1,11 +1,16 @@
 ﻿@import "bootstrap.less";
 
-.container{
-    margin-top:30px;
+body{
+    margin-top:40px;
 }
 
-.row.section{
-    margin-top:20px;
+.section{
+    padding:15px 0;
+}
+
+.line{
+    .section();
+    border-bottom:1px solid @gray-lighter;
 }
 
 form label.column{
